[package]
name = "cve_2022_23222"
version = "0.1.0"
edition = "2021"
authors = [
    "Rafael Ortiz <rafael@ortiz.sh>",
    "https://github.com/tr3ee"
]

# Optimize for size, reduce binary from ~3MB to ~280KB
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
nix = { version = "0.24.1", features = ["user"] }

[build-dependencies]
cc = "1.0"
libc = "0.2"
